Fixed loader not showing

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -171,27 +171,22 @@ html body {
 .thumbnail {
   max-width: 300px;
 }
-<<<<<<< HEAD
 
 /**************/
 /* Loader.css */
 /**************/
 
 .loader {
-  margin-top: 30px;
-  width: 50%;
   margin: 0 auto;
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  animation: spin 2s linear infinite;
+  animation: spin infinite 2s linear;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
-=======
->>>>>>> 01baa97af745920a8d81a98e7e9b337de0b3f2f2
